# epitech_projects

tech2/Arcade/: .gitignore  CMakeLists.txt  README.md  build.sh
tech2/Arcade/src/: main.cpp
tech2/Arcade/src/Core/: Core.cpp  Core.hpp
tech2/Arcade/src/Core/Switcher/: Switcher.cpp  Switcher.hpp
tech2/Arcade/src/Core/Wrapper/: Wrapper.cpp  Wrapper.hpp
tech2/Arcade/src/Game/: IGame.hpp
tech2/Arcade/src/Game/DoodleJump/: DoodleJump.cpp  DoodleJump.hpp  Utils.hpp
tech2/Arcade/src/Game/Menu/: Menu.cpp  Menu.hpp
tech2/Arcade/src/Game/Pacman/: Pacman.cpp  Pacman.hpp  Utils.hpp
tech2/Arcade/src/Game/Snake/: Snake.cpp  Snake.hpp  Utils.hpp
tech2/Arcade/src/Game/Sokoban/: Sokoban.cpp  Sokoban.hpp  Utils.hpp
tech2/Arcade/src/Graph/: IGraph.hpp
tech2/Arcade/src/Graph/LibNCurses/: NCurses.cpp  NCurses.hpp  NCursesObject.hpp
tech2/Arcade/src/Graph/LibSDL/: SDL.cpp  SDL.hpp  SDLObject.hpp
tech2/Arcade/src/Graph/LibSFML/: SFML.cpp  SFML.hpp  SFMLObject.hpp
tech2/Arcade/src/Shared/: Arcade.hpp  Clock.hpp  Color.hpp  IClass.hpp  ToolBox.hpp
tech2/IndieStudio/: .gitignore  CMakeLists.txt
tech2/IndieStudio/App/: CMakeLists.txt  main.cpp
tech2/IndieStudio/App/ECS/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.cpp  Coordinator.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.hpp
tech2/IndieStudio/App/ECS/Components/: Alive.hpp  Bomb.hpp  ControlWidget.hpp  Controlled.hpp  Damage.hpp  Drawable.hpp  DrawableButtonWidget.hpp  DrawableMapWidget.hpp  DrawableModel.hpp  DrawablePlayerWidget.hpp  DrawableSettingsControl.hpp  Gravity.hpp  Homing.hpp  Item.cpp  Item.hpp  Parallax.hpp  Particles.hpp  PlayerStat.hpp  RigidBody.hpp  Scalable.hpp  SoundEffect.hpp  Spawn.hpp  Spread.hpp  Temporary.hpp  Transform.hpp  Widget.hpp
tech2/IndieStudio/App/ECS/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  BombSystem.cpp  BombSystem.hpp  CollectibleSystem.cpp  CollectibleSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ControlSystem.cpp  ControlSystem.hpp  DestroySystem.cpp  DestroySystem.hpp  HomingSystem.cpp  HomingSystem.hpp  LifeSystem.cpp  LifeSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ParallaxRenderSystem.cpp  ParallaxRenderSystem.hpp  ParallaxSystem.cpp  ParallaxSystem.hpp  PartRenderSystem.cpp  PartRenderSystem.hpp  ParticlesSystem.cpp  ParticlesSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlaySoundSystem.cpp  PlaySoundSystem.hpp  RenderModelSystem.cpp  RenderModelSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpawnSystem.cpp  SpawnSystem.hpp  SpreadSystem.cpp  SpreadSystem.hpp  TemporarySystem.cpp  TemporarySystem.hpp  (+2 more)
tech2/IndieStudio/App/Errors/: Errors.hpp
tech2/IndieStudio/App/Utils/: Animations.hpp  GameManager.cpp  GameManager.hpp  Noise.hpp  SettingsManager.cpp  SettingsManager.hpp
tech2/IndieStudio/Assets/fonts/: Oretans-Shadow-readme.txt
tech2/IndieStudio/Assets/maps/: default_map.txt
tech2/IndieStudio/Assets/models/: missing_model.iqm
tech2/IndieStudio/Assets/models/bomb/: bomb.iqm
tech2/IndieStudio/Assets/models/crate/: crate.iqm
tech2/IndieStudio/Assets/models/items/: item.iqm
tech2/IndieStudio/Assets/models/pillar/: pillar.iqm
tech2/IndieStudio/Assets/models/player/: player.iqm
tech2/IndieStudio/Assets/textures/: skybox.hdr  ssskybox.hdr
tech2/IndieStudio/Lib/: CMakeLists.txt
tech2/IndieStudio/Lib/rl-cpp/: DataManager.hpp  Raylib-cpp.hpp  Raylib.hpp
tech2/IndieStudio/Lib/rl-cpp/Billboard/: Billboard.cpp  Billboard.hpp
tech2/IndieStudio/Lib/rl-cpp/Collisions/: Collisions.hpp
tech2/IndieStudio/Lib/rl-cpp/Colors/: Color.cpp  Color.hpp  Colors.hpp
tech2/IndieStudio/Lib/rl-cpp/Drawable/: IDrawable.hpp
tech2/IndieStudio/Lib/rl-cpp/Error/: Error.hpp
tech2/IndieStudio/Lib/rl-cpp/Image/: Image.cpp  Image.hpp
tech2/IndieStudio/Lib/rl-cpp/Matrix/: Matrix.hpp
tech2/IndieStudio/Lib/rl-cpp/Models/: Models.hpp
tech2/IndieStudio/Lib/rl-cpp/Shaders/: Shader.cpp  Shader.hpp  Shaders.hpp
tech2/IndieStudio/Lib/rl-cpp/Shapes/: Shapes.hpp
tech2/IndieStudio/Lib/rl-cpp/Sounds/: Sounds.hpp
tech2/IndieStudio/Lib/rl-cpp/Texts/: Text.cpp  Text.hpp  Texts.hpp
tech2/IndieStudio/Lib/rl-cpp/Textures/: Texture.cpp  Texture.hpp  Textures.hpp
tech2/IndieStudio/Lib/rl-cpp/Vectors/: Vector2.hpp  Vector3.hpp  Vector4.hpp  Vectors.hpp
tech2/IndieStudio/Lib/rl-cpp/Windows/: Window.cpp  Window.hpp  Windows.hpp
tech3/RType/: .gitignore  CMakeLists.txt  README.md
tech3/RType/App/Client/: client_main.cpp
tech3/RType/App/Client/ECS/: Component.hpp  ComponentManager.hpp  Coordinator.cpp  Coordinator.hpp  Entity.hpp  EntityManager.hpp  System.hpp
tech3/RType/App/Client/GameEngine/: Boss.hpp  BossManager.hpp  Circle.hpp  Collision.cpp  Collision.hpp  CollisionMap.hpp  EngineButton.cpp  EngineButton.hpp  Entity.hpp  EntityFactory.cpp  EntityFactoryMap.hpp  EventHandler.hpp  GameEntities.hpp  GridCell.hpp  GridCollision.hpp  IBonus.hpp  IEntity.hpp  LinkerEntities.hpp  MenuParallax.hpp  PollEvent.hpp  Projectile.hpp  RLEventHandler.hpp  SDLEventHandler.hpp  Shader.hpp  SpaceParallax.hpp  Square.hpp  UI.hpp
tech3/RType/App/Lib/: IWindow.hpp  SDL.hpp
tech3/RType/App/Network/: Boost.hpp
tech3/RType/App/Network/Protocol/: Client.hpp  ClientID.hpp  ClientManager.cpp  ClientManager.hpp  Communication.hpp  Constants.hpp  Server.hpp
tech3/RType/App/Network/RType/: Client.cpp  Client.hpp  NetworkInfos.hpp  RFC990.hpp  Server.cpp  Server.hpp
tech3/RType/App/Server/: servr_main.cpp
tech3/RType/App/Server/ECS/: ComponentArray.hpp  EntityManager.cpp  SystemManager.hpp
tech3/RType/App/Server/GameEngine/: EntityFactory.hpp  GridCell.cpp  GridCollision.cpp  Initializor.cpp  (+5 more)
tech3/RType/App/Utils/: Color.hpp  DataManager.hpp  PathBuilder.hpp  Random.hpp  Rect.hpp  SafeQueue.hpp  ThreadPool.hpp  Vector2.hpp
tech3/RType/Assets/Map/: level1.fill  level1.map  level1.rt  level2.fill  level2.map  level3.fill  level3.map  level4.fill  level4.map  level6.fill  level6.map  level7.fill  level7.map  level8.fill  level8.map
tech3/RType/Modules/: FindBoost.cmake  FindRaylib.cmake
(+1686 files in other folders)
